--- a/package.json
+++ b/package.json
@@ -10,11 +10,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "chai": "^4.1.2",
-    "chai-http": "^4.0.0",
     "express": "^4.16.3",
     "memory-cache": "^0.2.0",
-    "mysql": "^2.15.0",
-    "sinon": "^6.0.1"
+    "mysql": "^2.15.0"
   }
 }
